--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "http-proxy": "^1.18.1",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/http-proxy": "^1.17.14",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "eslint": "8.57.0",
