--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies": "^0.9.1",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/cookies": "^0.9.0",
     "@types/http-proxy": "^1.17.14",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
