--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cookies": "^0.9.1",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
@@ -16,6 +17,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cookies": "^0.9.0",
     "@types/http-proxy": "^1.17.14",
     "@types/node": "20.14.9",
