--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
