--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "cookies": "^0.9.1",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
