--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
+    "date-fns": "^3.6.0",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
     "react": "18.3.1",
