--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["./components/*"],
-      "@/styles/*": ["./styles/*"],
-      "@/api/*": ["./api-client/*"],
-      "@/models/*": ["./models/*"],
-      "@/hooks/*": ["./hooks/*"],
-      "@/utils/*": ["./utils/*"],
-      "@/images/*": ["./images/*"]
+      "@/*": ["./*"],
+      "@/api/": ["./api-client/index.ts"],
+      "@/api/*": ["./api-client/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
