--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
+    "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
     "react": "18.3.1",
