--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "swr": "^2.2.5"
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "swr": "^2.2.5",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
