--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.0",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
     "swr": "^2.2.5",
     "unified": "^11.0.5"
   },
