--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
+    "remark-prism": "^1.3.6",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
     "swr": "^2.2.5",
@@ -41,6 +42,7 @@
     "@types/http-proxy": "^1.17.14",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
+    "@types/remark-prism": "^1.3.7",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "typescript": "5.5.3"
