--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
@@ -35,7 +36,8 @@
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
     "swr": "^2.2.5",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
