--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-toastify": "^10.0.5",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.0",
