--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "gray-matter": "^4.0.3",
     "http-proxy": "^1.18.1",
     "next": "14.2.4",
+    "qs": "^6.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.0",
     "react-toastify": "^10.0.5",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
