--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
     "react-intersection-observer": "^9.13.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-document": "^7.0.3",
