--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "add": "^2.0.6",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
@@ -39,8 +40,10 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
+    "sanitize-html": "^2.13.0",
     "swr": "^2.2.5",
     "unified": "^11.0.5",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/remark-prism": "^1.3.7",
+    "@types/sanitize-html": "^2.13.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "typescript": "5.5.3"
